Populate intial db data and set up show view

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,5 +1,8 @@
 <p id="notice"><%= notice %></p>
 
+<h2>Show Book</h2>
+
+
 <p>
   <strong>Title:</strong>
   <%= @book.title %>
@@ -8,6 +11,16 @@
 <p>
   <strong>Author:</strong>
   <%= @book.author %>
+</p>
+
+<p>
+  <strong>Price:</strong>
+  <%= @book.price %>
+</p>
+
+<p>
+  <strong>Published Date:</strong>
+  <%= @book.published_date %>
 </p>
 
 <%= link_to 'Edit', edit_book_path(@book) %> |
