--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -6,6 +6,9 @@
     <tr>
       <th>Title</th>
       <th colspan="3"></th>
+
+      <th>Actions</th>
+      <th colspan="3"></th>
     </tr>
   </thead>
 
@@ -13,10 +16,9 @@
     <% @books.each do |book| %>
       <tr>
         <td><%= book.title %></td>
-        <td><%= book.author %></td>
-        <td><%= link_to 'Show', book %></td>
+        <td><%= link_to 'Show', book_path(book.id) %></td>
         <td><%= link_to 'Edit', edit_book_path(book) %></td>
-        <td><%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Destroy', book_path(book.id), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
