--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -4,11 +4,7 @@
 <table>
   <thead>
     <tr>
-      <th>Title</th>
-      <th colspan="3"></th>
-
-      <th>Actions</th>
-      <th colspan="3"></th>
+      <th>Title</th
     </tr>
   </thead>
 
@@ -16,9 +12,9 @@
     <% @books.each do |book| %>
       <tr>
         <td><%= book.title %></td>
-        <td><%= link_to 'Show', book_path(book.id) %></td>
+        <td><%= link_to 'Show', book_path(book) %></td>
         <td><%= link_to 'Edit', edit_book_path(book) %></td>
-        <td><%= link_to 'Destroy', book_path(book.id), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Destroy', delete_book_path(book) %></td>
       </tr>
     <% end %>
   </tbody>
