--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -16,6 +16,16 @@
     <%= form.text_field :title %>
   </div>
 
+  <div class="field">
+    <%= form.label :author %>
+    <%= form.text_field :author %>
+  </div>
+
+  <div class="field">
+    <%= form.label :price %>
+    <%= form.number_field :price, step: :any %>
+  </div>
+
   <div class="actions">
     <%= form.submit("Submit") %>
   </div>
