--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -28,7 +28,7 @@
 
   <div class="field">
     <p>Published Date</p>
-    <%= form.date_select("book", "published_date", use_two_digit_numbers: true,
+    <%= date_select("book", "published_date", use_two_digit_numbers: true,
       start_year: 1950, order: [:day, :month, :year]) %>
   </div>
 
