--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -29,7 +29,7 @@
   <div class="field">
     <p>Published Date</p>
     <%= date_select("book", "published_date", use_two_digit_numbers: true,
-      start_year: 1950, order: [:day, :month, :year]) %>
+      start_year: 1950, order: [:month, :day, :year]) %>
   </div>
 
   <div class="actions">
